# shared-middleware

./: .dockerignore  .gitignore  README.md
docs/: README.md  confluent-topics.md
python/: confuse_base_app.py  confuse_base_config.py  pyproject.toml
python/confuse-common/: README.md  pyproject.toml
python/confuse-common/src/confuse_common/: __init__.py
python/confuse-common/src/confuse_common/config/: __init__.py
python/confuse-common/src/confuse_common/events/: __init__.py  config.py  consumer.py  episode.py  events.py  producer.py  pyproject.toml  topics.py
python/confuse-common/src/confuse_common/middleware/: __init__.py  auth.py  auth_pb2.py  rate_limit.py  security_headers.py
python/confuse-common/src/confuse_common/proto/: __init__.py  auth_pb2.py  auth_pb2_grpc.py
python/confuse_events/: __init__.py  config.py  consumer.py  events.py  producer.py  topics.py
python/confuse_middleware/: __init__.py  auth.py
rust/confuse-common/: Cargo.toml
rust/confuse-common/src/: config.rs  lib.rs  observability.rs
rust/confuse-common/src/connectivity/: config.rs  database.rs  error.rs  falkordb.rs  memgraph.rs  mod.rs  tracing.rs
rust/confuse-common/src/connectivity/cache/: memory.rs  mod.rs  redis.rs
rust/confuse-common/src/connectivity/client/: http.rs  mod.rs
rust/confuse-common/src/connectivity/resilience/: circuit_breaker.rs  mod.rs  retry.rs
rust/confuse-common/src/events/: config.rs  consumer.rs  episode.rs  events.rs  mod.rs  producer.rs  topics.rs
rust/confuse-common/src/middleware/: auth.rs  authorization.rs  axum_auth.rs  axum_rate_limit.rs  cache.rs  circuit_breaker.rs  cors.rs  logging.rs  mod.rs  rate_limiting.rs  security_headers.rs  zero_trust.rs
rust/confuse-common/src/models/: auth.rs  mcp.rs  mod.rs
rust/confuse-common/src/observability/: logging.rs  mod.rs
rust/confuse-common/src/proto/: confuse_auth_v1.rs  mod.rs
schemas/events/: auth.proto  chunk.proto  code.proto  common.proto  dlq.proto  docs.proto  embedding.proto  graph.proto
typescript/confuse-common/: README.md  package-lock.json  package.json  tsconfig.json
typescript/confuse-common-backup/: package-lock.json  package.json
typescript/confuse-common-backup/src/: config.ts  consumer.ts  index.ts  producer.ts
typescript/confuse-common/src/: config.ts  consumer.ts  events.ts  index.ts  producer.ts
typescript/confuse-common/src/middleware/: index.ts
typescript/confuse-events/: package.json
typescript/confuse-events/src/: index.ts  producer.ts  topics.ts
