[package]
name = "confuse-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async/Web
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Actix Web (Legacy/MCP)
actix-web = { version = "4.4", optional = true }
actix-web-httpauth = { version = "0.8", optional = true }

# Axum (Modern/API)
axum = { version = "0.7", features = ["macros"], optional = true }
tower = { version = "0.4", features = ["util", "timeout"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "auth", "request-id"], optional = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Kafka (Events)
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Utils
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
validator = { version = "0.16", features = ["derive"] }
rand = "0.8"
jsonwebtoken = "9.2"
base64 = "0.21"
rsa = "0.9"
regex = "1.10"
once_cell = "1.19"
dashmap = "5.5"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.21"
tracing-opentelemetry = "0.23"
log = "0.4"

[features]
default = ["actix", "axum-support"]
actix = ["dep:actix-web", "dep:actix-web-httpauth"]
axum-support = ["dep:axum", "dep:tower", "dep:tower-http"]
